working base example with refs
